2004-03-22  Waider  <waider@waider.ie>

	* lisp/bbdb-migrate.el: * Minor docstring fix (Stefan Monnier)
	* Catch error if attempting to kill only window in frame 
	 (Stefan Monnier)

	* lisp/bbdb-snarf.el:
	  Namespace pollution fix (digit => bbdb-digit) (Stefan Monnier)

	* lisp/bbdb.el: * restore auto-create behaviour (Robert Widhopf-Fenk)

	* lisp/bbdb-com.el:
	* Bugfix for bug caused by previous patch (Robert Widhopf-Fenk)
	* Additions to alias generation (Robert Widhopf-Fenk)

2004-02-01  Waider  <waider@waider.ie>

	* lisp/bbdb-snarf.el (bbdb-merge-interactively):
	If the specified value of 'nets' isn't a list, make it so.

2004-01-23  Waider  <waider@waider.ie>

	* lisp/bbdb.el:
	Handle surnames with prefixes (Adrian Lanz <lanz@fowi.ethz.ch>)

2003-10-10  Robert Widhopf  <bbdb@robf.de>

	* lisp/bbdb-com.el (bbdb-edit-current-field): Handle field
	detection gracefully at line-end of one-line display.
	(reported by Dan Jacobson)

	* lisp/bbdb-gnus.el (bbdb/gnus-split-method): Honor Resent-*
	headers if present. (Reported by Thomas Gerds)

	* lisp/bbdb-com.el (bbdb-help): Added colons to separate help
	items and thus avoid confusion (reported by Dan Jacobson)

	* lisp/bbdb.el (bbdb-annotate-message-sender): Honor create-p for
	creating new records if a similar record already exists.
	
	* lisp/bbdb-com.el (bbdb-prompt-for-create): Slightly changed the
	semantics of the returned value to honor create-p.
	
2003-08-01  Robert Widhopf  <bbdb@robf.de>

	* lisp/bbdb-com.el (bbdb-dwim-net-address-allow-redundancy): 
	(bbdb-dwim-net-address): *shurg* added 'netonly thus allowing to
	have no real-names being shown for expanded aliases and completed
	names.

2003-08-05  Waider  <waider@waider.ie>

	* lisp/bbdb.el:
	* bbdb-default-area-code: fix customize hook to recognize integers

	* texinfo/bbdb.texinfo:
	* Rewrite doco for bbdb-electric-p to make it a little clearer.

	* testing/Makefile.in: * Use GREP and GREPCONTEXT autoconfs

	* configure.ac: